--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/logos/h.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Harithaa Srii | Frontend Developer & UI/UX Designer</title>
+    <title>Harithaa Srii | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
